Fix logo alignment

--- a/src/ui/pages/home/index.module.css
+++ b/src/ui/pages/home/index.module.css
@@ -6,6 +6,7 @@
   @media (min-height: 600px) {
     height: 20rem;
     margin: 0 0 3rem;
+    width: 20rem;
   }
 }
 
